# linkedout-oss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  setup
backend/: .env.example  .env.integration  .env.test  .gitignore  CLAUDE.md  alembic.ini  config.yaml.example  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_baseline.py  002_add_previous_linkedin_url.py
backend/prompts/intelligence/: summarize_turns.md
backend/prompts/project_mgmt/: task_triage_agent.md  task_triage_agent.meta.jsonc
backend/src/: __init__.py
backend/src/common/: __init__.py
backend/src/dev_tools/: README.md  __init__.py  backfill_experience_dates.py  backfill_seniority.py  burnish.py  classify_roles.py  company_utils.py  curate_test_data.py  diagnostics.py  download_profile_pics.py  enrich_companies.py  fe_setup.py  fix_none_names.py  import_pdl_companies.py  integration_test.py  load_apify_profiles.py  log_reader.py  precommit_tests.py  reconcile_stubs.py  run_agent.py  run_all_agents.py  sandbox.py  seed_companies.py  seed_export.py  tmux_harness.py  verdict.py  wikidata_utils.py
backend/src/linkedout/: __init__.py  cli.py  cli_helpers.py  version.py
backend/src/organization/: __init__.py
backend/src/shared/: __init__.py
backend/src/utilities/: embedding_progress.py
backend/tests/: __init__.py  seed_db.py
backend/tests/common/: __init__.py  test_base_controller_utils.py  test_base_service.py  (+2 more)
(+1293 files in other folders)
